--- a/starter-code/styles.css
+++ b/starter-code/styles.css
@@ -175,7 +175,7 @@ h2.light {
     .header-container {
         padding-bottom: 5rem;
     }
-    .container {
+    .container, .quiz-section {
         display: flex;
         justify-content: center; 
         align-items: flex-start;
@@ -447,8 +447,43 @@ input:checked + .slider:before {
     .quiz-subject > h1 {
         font-size: 2.8rem;
     }
+    
 }
 
+@media screen and (min-width: 1024px) {
+    .quiz-subjects {
+        width: clamp(500px, 100%, 600px);
+    }
+
+    #question {
+        max-width: 500px;
+    }
+}
+/* Progress bar */
+.progress-bar {
+    width: 100%;
+    background-color: var(--blue-850);
+    border-radius: 104px;
+    border: 8px solid transparent;
+    margin-bottom: 3rem;
+}
+
+.bar {
+    width: 1%;
+    height: 8px;
+    background-color: var(--purple-600);
+    border-radius: inherit;
+}
+
+@media screen and (min-width: 1024px) {
+    .question-display-header {
+        min-width: clamp(250px, 100%, 450px);
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        height: 475px;
+    }
+}
 /* checking */
 
 .error-status {
