added light mode to progress bar

--- a/starter-code/styles.css
+++ b/starter-code/styles.css
@@ -470,6 +470,10 @@ input:checked + .slider:before {
     margin-bottom: 3rem;
 }
 
+.progress-bar.light {
+    background-color: #fff;
+}
+
 .bar {
     width: 1%;
     height: 8px;
